[tool.poetry]
name = "Tuneworthy"
version = "0.1.0"
description = "A music library management tool with ID3 tag mining and database management."
readme = "README.md"
license = "MIT"  # Specify the license type
authors = ["Walter Arredondo <walter@ciencias.unam.mx>"]
packages = [
    { include = "src" },
]


[tool.poetry.dependencies]
# Add your project dependencies here
# Example: requests = "^2.25.1"
python = "^3.9"
mutagen = "^1.46.0"
pygobject = "^3.50.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"  # Specify the version of pytest you want

[tool.poetry.scripts]
Tuneworthy = "src.main:main"  # Assuming your entry point is in main.py

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]
